virtual-service-backend-80-20.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-demo-backend
  namespace: istio-demo
spec:
  hosts:
    - istio-demo-backend
  http:
  - route:
    - destination:
        host: istio-demo-backend
        subset: v1
      weight: 80
    - destination:
        host: istio-demo-backend
        subset: v2
      weight: 20
